--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/delay": "^3.1.0",
 		"@types/tedious": "^4.0.9",
 		"dotenv": "^16.0.3",
 		"svelte": "^3.54.0",
@@ -23,9 +24,13 @@
 	"type": "module",
 	"dependencies": {
 		"@azure/ms-rest-nodeauth": "^3.1.1",
+		"@trpc/client": "^10.12.0",
+		"@trpc/server": "^10.12.0",
+		"delay": "^5.0.0",
 		"mssql": "^9.1.1",
 		"pg-hstore": "^2.3.4",
 		"sequelize": "^6.28.1",
-		"tedious": "^15.1.3"
+		"tedious": "^15.1.3",
+		"trpc-sveltekit": "^3.4.2"
 	}
 }
